# NeOpenGLBeautyFace

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/sty/ne/opengl/beautyface/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  FaceTrack.cpp  FaceTrack.h  native-lib.cpp
app/src/main/cpp/FaceAlignment/: CMakeLists.txt
app/src/main/java/com/sty/ne/opengl/beautyface/: MainActivity.java  MyGLRender.java
app/src/main/java/com/sty/ne/opengl/beautyface/face/: Face.java  FaceTrack.java
app/src/main/java/com/sty/ne/opengl/beautyface/filter/: BaseFilter.java  BaseFrameFilter.java  BeautyFilter.java  BigEyeFilter.java  CameraFilter.java  ScreenFilter.java  StickFilter.java
app/src/main/java/com/sty/ne/opengl/beautyface/record/: MyEGL.java  MyMediaRecorder.java
app/src/main/java/com/sty/ne/opengl/beautyface/util/: BufferHelper.java  CameraHelper.java  FileUtil.java  PermissionUtils.java  ShaderHelper.java  TextResourceReader.java  TextureHelper.java
app/src/main/res/drawable/: btn_record_background.xml  group_record_speed_background.xml  rbtn_record_speed_background.xml  rbtn_record_speed_text.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/raw/: base_fragment.glsl  base_vertex.glsl  beauty_fragment.glsl  beauty_fragment2.glsl  bigeye_fragment.glsl  camera_fragment.glsl  camera_vetex.glsl
app/src/main/res/values/: strings.xml
app/src/test/java/com/sty/ne/opengl/beautyface/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
(+2 files in other folders)
